--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ chrono = "0.4.42"
 colored = "3.0.0"
 lazy_static = "1.5.0"
 regex = "1.12.2"
+rustyline = "17.0.2"
+tokio = "1.48.0"
 # No dependencies for now
